<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPERI Moodle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_frame">UserFrame</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="desc">Profile Pic</string>
    <string name="branch_">Branch:</string>
    <string name="city_">City:</string>
    <string name="institute_">Institute:</string>
    <string name="title_activity_my_info">My Info</string>
    <string name="large_text">Large Text</string>
    <string name="name_">Name:</string>
    <string name="enrollno_">EnrollNo:</string>
    <string name="title_activity_my_courses">My Courses</string>

    <string-array name="fName"></string-array>
    <string-array name="sName"></string-array>

    <string name="title_activity_instant_messaging">Instant Messaging</string>
    <string name="send">Send</string>
    <string name="to_">To:</string>
    <string name="message">Message:</string>
    <string name="enter_message">Enter Message</string>
    <string name="title_activity_course_contents">Course Contents</string>
    <string name="title_activity_about_us">About US</string>
    <string name="title_activity_x">X</string>
    <string name="about">Moodle is a learning platform designed to provide educators, administrators and learners with a single robust, secure and integrated system to create personalised learning environments. GPERI Moodle App is a Customized Android application targeted to provide quick access to GPERI Moodle DMS Website contents, So that Students can easily access the specific contents. The basic idea is aspired to provide one touch solution with an easy access; it uses Moodle API and Moodle Mobile web service to communicate with the server. The application is developed by <a href="https://www.facebook.com/1702347571">Rutvik Mehta</a>, <a href="https://www.facebook.com/100001753077185">Rakshit Sathawara</a>, and <a href="https://www.facebook.com/100002371825460">Shruti Gupta</a>, The students of Gujarat Power Engineering and Research Institute. "Taking all the feedback into consideration, the makers are trying to improvise the app as per the students’ requirements"</string>
    <string name="keep_me_logged_in">Remember Me</string>

</resources>
