<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstantMessaging" >

    <Spinner
        android:id="@+id/spnFriends"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spnFriends"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:text="@string/to_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/spnFriends"
        android:text="@string/send"
        android:onClick="trySendMsg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAbout"
        android:layout_below="@+id/spnFriends"
        android:layout_marginTop="15dp"
        android:text="@string/message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/spnFriends"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/enter_message"
        android:inputType="textAutoCorrect|textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
