<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyInfo" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgPicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/lblNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/name_"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblInst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Institute:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblEnrollNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrollno_"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblDep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Branch:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblCty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lbleMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="eMail:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblSkypeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SkypeId:"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
